--- a/index.html
+++ b/index.html
@@ -1,3 +1,305 @@
-<html>
-Testing Website
+﻿
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <title>Connor Singerline Portfolio</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Chrome, Firefox OS and Opera -->
+    <meta name="theme-color" content="#0000cc">
+    <!-- Windows Phone -->
+    <meta name="msapplication-navbutton-color" content="#0000cc">
+    <!-- iOS Safari -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+          crossorigin="anonymous">
+    <link href="css/main.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Lato:400,400italic,700,700italic" rel="stylesheet" type="text/css">
+    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+    <link rel="stylesheet" type="text/css" media="screen" href="http://cdnjs.cloudflare.com/ajax/libs/fancybox/1.3.4/jquery.fancybox-1.3.4.css" />
+    <style type="text/css">
+        a.fancybox img {
+            border: none;
+            box-shadow: 0 1px 7px rgba(0,0,0,0.6);
+            -o-transform: scale(1,1);
+            -ms-transform: scale(1,1);
+            -moz-transform: scale(1,1);
+            -webkit-transform: scale(1,1);
+            transform: scale(1,1);
+            -o-transition: all 0.2s ease-in-out;
+            -ms-transition: all 0.2s ease-in-out;
+            -moz-transition: all 0.2s ease-in-out;
+            -webkit-transition: all 0.2s ease-in-out;
+            transition: all 0.2s ease-in-out;
+        }
+
+        a.fancybox:hover img {
+            position: relative;
+            z-index: 999;
+            -o-transform: scale(1.03,1.03);
+            -ms-transform: scale(1.03,1.03);
+            -moz-transform: scale(1.03,1.03);
+            -webkit-transform: scale(1.03,1.03);
+            transform: scale(1.03,1.03);
+        }
+    </style>
+</head>
+
+<body>
+
+    <header class="container-fluid topimg" id="top">
+        <div class="title">
+            <h1 class="blue bigTxt">Connor </h1>
+            <h1 class="inline bigTxt">Singerline</h1>
+        </div>
+        <div>
+            <br />
+            <h3 class="blue uppercase">Full&nbsp;</h3>
+            <h3 class="blue uppercase">Stack</h3>
+            <br>
+            <h3 class="inline uppercase">C# / .NET</h3><br />
+            <h3 class="inline underline uppercase">Developer</h3>
+        </div>
+        <!--<h4 class="">Responsive and tasteful website design.</h4>
+        <h4 class="">Elegant back end solutions.</h4>-->
+        <div class="slideInDown bounceMargin">
+            <a class="downArrow" href="#projects"><i class="fa fa-3x fa-chevron-down"></i></a>
+        </div>
+
+    </header>
+    <nav class="navbar navbar-inverse" data-spy="affix" id="navTop">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <div>
+                    <a class="navbar-brand" href="#top">
+
+                        <h4 class="blue">Connor</h4>
+                        <h4 class="inline">Singerline</h4>
+                    </a>
+                </div>
+            </div>
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#projects">PROJECTS</a></li>
+                    <li><a href="#about">ABOUT</a></li>
+                    <li><a href="#contact">CONTACT</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <section class="container-fluid text-center bg-3 " id="projects">
+        <h1 style="margin-bottom:45px;"><b style="text-decoration: underline">Projects</b></h1>
+        <div class="row ">
+            <div class="col-md-6 col-md-push-6 no-left">
+                <img src="img/clevelandsports.jpg" class="img-responsive project fancybox" /></a>
+
+            </div>
+            <div class="col-md-6  col-md-pull-6 no-right">
+                <div class="projUnder">
+                    <h3 class="blue">Cleveland Sports History</h3>
+                    <ul class="skills">
+                        <li>HTML </li>
+                        <li>Bootstrap </li>
+                        <li>CSS </li>
+                    </ul>
+                </div>
+                <p class="description">
+                    Basic single page website showing the ability to work with HTML, Bootstrap and CSS for custom built websites.
+                </p>
+                <a href="http://codepen.io/csingerline/pen/mrZgxo" target="_blank"><i class="fa fa-codepen fa-3x link-i" data-toggle="tooltip" data-placement="bottom" title="Open Project on CodePen"></i></a>
+            </div>
+        </div>
+        <br /><br /><br /><br />
+        <div class="divide "></div>
+        <br /><br /><br /><br />
+        <div class="row ">
+            <div class="col-md-6 no-right">
+                <img src="img/jquerysample.jpg" class="img-responsive project fancybox" /></a>
+
+            </div>
+            <div class="col-md-6 no-left">
+                <div class="projUnder">
+                    <h3 class="blue">Sample Site Using JavaScript and jQuery</h3>
+                    <ul class="skills">
+                        <li>HTML </li>
+                        <li>CSS </li>
+                        <li>JS </li>
+                        <li>jQuery </li>
+                    </ul>
+                </div>
+                <p class="description">
+                    This website is a sample page showing the ability to use JavaScript and jQuery. The jQuery can be tested by
+                    selecting the different tabs available in the navigation bar and seeing the HTML code generated.
+                </p>
+                <a href="http://codepen.io/csingerline/pen/wJzjxY" target="_blank"><i class="fa fa-codepen fa-3x link-i" data-toggle="tooltip" data-placement="bottom" title="Open Project on CodePen"></i></a>
+            </div>
+        </div>
+        <br /><br /><br /><br />
+        <div class="divide "></div>
+        <br /><br /><br /><br />
+        <div class="row ">
+            <div class="col-md-6 col-md-push-6 no-left">
+                <img src="img/Singerline_Hotel_Management_Network_Diagram.png" class="img-responsive project fancybox" /></a>
+
+            </div>
+            <div class="col-md-6  col-md-pull-6 no-right">
+                <div class="projUnder">
+                    <h3 class="blue">Hotel Management Network - SQL</h3>
+                    <ul class="skills">
+                        <li>T-SQL </li>
+                        <li>SSMS </li>
+                    </ul>
+                </div>
+                <p class="description">
+                    This is a Network Diagram created with SQL Server 2016 Management Studio as practice to create a full database
+                    from a SQL script. The SQL script to create the database is also available for download if requested.
+                </p>
+             </div>
+        </div>
+        <br /><br /><br /><br />
+        <div class="divide "></div>
+        <br /><br /><br /><br />
+               <!-- <ul class="skills">
+                        <li>HTML </li>
+                        <li>CSS </li>
+                        <li>JS </li>
+                        <li>JQuery </li>
+                    </ul>
+                </div>
+                <p class="description">
+                    I used the IP-API and Open Weather Map API to create a weather app that shows current temperature with dynamically
+                    changing icons based on current conditions. If the location detected is innacurate, the user can change
+                    their location.
+                </p>
+                <a href="/weather-app" target="_blank"> <i class="fa fa-external-link fa-3x link-i" data-toggle="tooltip" data-placement="bottom" title="Open Project"></i></a>
+                <a href="http://codepen.io/BobbyMcWho/pen/pyQOWj" target="_blank"><i class="fa fa-codepen fa-3x link-i" data-toggle="tooltip" data-placement="bottom" title="Open Project on CodePen"></i></a>
+            </div>
+        <div class="row ">
+            <div class="col-md-6 no-right">
+                <a href="/weather-app" target="_blank"><img src="img/weather-app-large.png" class="img-responsive project" /></a>
+
+            </div>
+            <div class="col-md-6  no-left">
+                <div class="projUnder">
+                    <h3 class="blue">Local Weather App</h3>
+            </div>
+        <div class="divide "></div>
+        <div class="row ">
+            <div class="col-md-6 col-md-push-6 no-left">
+                <a href="/random-quote-generator" target="_blank"><img src="img/random-quote-generator-large.png" class="img-responsive project" /></a>
+
+            </div>
+            <div class="col-md-6 col-md-pull-6 no-right">
+                <div class="projUnder">
+                    <h3 class="blue">Random Quote Generator</h3>
+                    <ul class="skills">
+                        <li>HTML </li>
+                        <li>CSS </li>
+                        <li>JS </li>
+                        <li>JQuery </li>
+                    </ul>
+                </div>
+                <p class="description">
+                    I used the Quotes on Design API to pull quotes from their database, and display them to the user, changing
+                    the background color each time a new quote is loaded. Users can also click a link to tweet the quote.
+                </p>
+                <a href="/random-quote-generator" target="_blank"><i class="fa fa-external-link fa-3x link-i" data-toggle="tooltip" data-placement="bottom" title="Open Project"></i></a>
+                <a href="http://codepen.io/BobbyMcWho/pen/MyBLMg" target="_blank"><i class="fa fa-codepen fa-3x link-i" data-toggle="tooltip" data-placement="bottom" title="Open Project on CodePen"></i></a>
+            </div>
+        </div>-->
+    </section>
+    <div class="divide"></div>
+    <div class="divide2 visible-md visible-lg"></div>
+    <div class="divide3 visible-md visible-lg"></div>
+    <div class="divide4 visible-lg"></div>
+    <section class="container-fluid text-center bg-1 " id="about">
+        <div class="row">
+            <div class="col-lg-12 about">
+                <h1 class="inline whitetxt">Passion</h1>
+                <br>
+                <div class="inline">
+                    <h1 class="blue">&amp;</h1>
+                </div>
+                <h1 class="inline whitetxt">Drive</h1>
+                <img src="img/favicon.png" alt="Connor Singerline" width="200px" class="img img-responsive img-circle me">
+                <div class="row">
+                    <div class="col-md-6 col-md-offset-3">
+                        <p class="whitetxt">
+                            Connor Singerline: I am a full stack developer from Cleveland, Ohio who enjoys building
+                            innovative solutions to complicated problems. I currently specialize in C# / .NET developement but I am
+                            continually learning the latest and greatest technologies.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <div class="divide"></div>
+    <div class="divide2 visible-md visible-lg"></div>
+    <div class="divide3 visible-md visible-lg"></div>
+    <div class="divide4 visible-lg"></div>
+    <section class="container-fluid text-center bg-2" id="contact">
+        <div class="row rowMain">
+            <div class="col-md-4 col-md-offset-4">
+                <h3> Contact Me</h3>
+                <p>
+                    If you are interested in contacting me or would like to see more of my work. Feel free to reach
+                    out to me on one of my profiles below.
+                </p>
+                <a href="https://www.linkedin.com/in/connorsingerline" target="_blank" class="link-i linkedin"><i class="fa fa-linkedin-square fa-3x"></i></a>
+                <a href="https://github.com/csingerline" target="_blank" class="link-i github"><i class="fa fa-github fa-3x"></i></a>
+                <a href="http://codepen.io/csingerline" target="_blank" class="link-i codepen"><i class="fa fa-codepen fa-3x"></i></a>
+                </span>
+            </div>
+        </div>
+    </section>
+
+    <footer class="container-fluid bg-4 text-center">
+        <p> Made by <a class="blue email" href="mailto:connor.singerline@gmail.com">Connor Singerline</a></p>
+    </footer>
+    <nav class="navbar navbar-inverse" data-spy="affix" id="navBot">
+        <div class="container-fluid">
+            <div class="" id="botNavbar">
+                <ul class="nav navbar-nav navbar-center">
+                    <li><a href="#projects">PROJECTS</a></li>
+                    <li><a href="#about">ABOUT</a></li>
+                    <li><a href="#contact">CONTACT</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/fancybox/1.3.4/jquery.fancybox-1.3.4.pack.min.js"></script>
+    <script type="text/javascript">
+    $(function($){
+        var addToAll = false;
+        var gallery = true;
+        var titlePosition = 'inside';
+        $(addToAll ? 'img' : 'img.fancybox').each(function(){
+            var $this = $(this);
+            var title = $this.attr('title');
+            var src = $this.attr('data-big') || $this.attr('src');
+            var a = $('<a href="#" class="fancybox"></a>').attr('href', src).attr('title', title);
+            $this.wrap(a);
+        });
+        if (gallery)
+            $('a.fancybox').attr('rel', 'fancyboxgallery');
+        $('a.fancybox').fancybox({
+            titlePosition: titlePosition
+        });
+    });
+    $.noConflict();
+    </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous"></script>
+</body>
+
+
 </html>
